# aoc-2019

./: .gitignore  CMakeLists.txt
aoc/: CMakeLists.txt
aoc/2019/: problem1.cpp  problem2.cpp  problem3.cpp
aoc/include/: problem.h  util.h
aoc/include/2019/: intcode.h  problem_01.h  problem_02.h  problem_03.h  problem_04.h  problem_05.h
aoc/src/: main.cpp  problem.cpp
aoc/src/2019/: intcode.cpp  problem_01.cpp  problem_02.cpp  problem_03.cpp  problem_04.cpp  problem_05.cpp
src/: problem1.cpp  problem2.cpp
tests/: CMakeLists.txt
tests/src/2019/: problem_01.cpp  problem_02.cpp  problem_03.cpp  problem_04.cpp
